Add a whole bunch of pages and flesh out group order design

--- a/gom/gom-dashboard.html
+++ b/gom/gom-dashboard.html
@@ -21,8 +21,7 @@
     <div id="sidebar"></div>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div
-        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Dashboard</h1>
       </div>
       <h3>Manager Profile</h3>
@@ -39,7 +38,7 @@
           <table class="table table-borderless table-sm small bg-light">
             <tr>
               <th scope="row">Id:</th>
-              <td><a href="#">wiz-00068465</a></td>
+              <td><a href="acct-information.html">wiz-00068465</a></td>
             </tr>
             <tr>
               <th scope="row">Joined:</th>
@@ -54,12 +53,12 @@
         <div class="col">
           <table class="table table-borderless table-sm small bg-light">
             <tr>
-              <th scope="row">Esteem:</th>
-              <td><a href="#">14</a></td>
+              <th scope="row">Reputation:</th>
+              <td>14</td>
             </tr>
             <tr>
               <th scope="row">Reviews:</th>
-              <td><a href="#">2</a></td>
+              <td>2</td>
             </tr>
           </table>
         </div>
@@ -83,7 +82,7 @@
               <td>524</td>
               <td>2019/02/15</td>
               <td><a href="gom-summary.html">Lights/BWL Japanese Album</a></td>
-              <td>Gauging Interest</td>
+              <td>Interest Check</td>
               <td>2/50</td>
               <td>
                 <i class="fas fa-dollar-sign text-light"></i>
