--- a/gom/index.html
+++ b/gom/index.html
@@ -40,29 +40,29 @@
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h2>Buy</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
               tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. You know you wanna buy this shit.
               So take a look at our catalog and start buying shit!</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View Marketplace <i
+            <p><a class="btn btn-secondary" href="marketplace.html" role="button">View Marketplace <i
                   class="fas fa-angle-right"></i></a></p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h2>Sell</h2>
             <p>Donec id elit non mi porta gravida at eget metus. You're one of the people who likes having way too much
               work to do and selling this shit. And for what? So people can buy this shit, or because you're a masochist. We may never know. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">Create Group Order <i
+            <p><a class="btn btn-secondary" href="go-new-form-1.html" role="button">Create Group Order <i
                   class="fas fa-angle-right"></i></a></p>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <h2>Produce</h2>
             <p>You actually make this shit. But you don't have to sell it. List it here and other people will sell your
               shit for you. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id
               ligula porta felis euismod semper.</p>
             <p><a class="btn btn-secondary" href="#" role="button">Register Vendor Account <i
                   class="fas fa-angle-right"></i></a></p>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
