--- a/gom/msg-details.html
+++ b/gom/msg-details.html
@@ -27,7 +27,7 @@
         <tbody>
           <tr>
             <th scope="row">From:</th>
-            <td><a href="#">other wiz</a></td>
+            <td><a href="user-profile.html">other wiz</a></td>
           </tr>
           <tr>
             <th scope="row">Received:</th>
@@ -39,7 +39,7 @@
           </tr>
           <tr>
             <th scope="row">Order:</th>
-            <td><a href="#">524 - Lights/BWL Japanese Album</a></td>
+            <td><a href="gom-summary.html">524 - Lights/BWL Japanese Album</a></td>
           </tr>
           <tr>
             <th scope="row">Message:</th>
