--- a/gom/msg-inbox.html
+++ b/gom/msg-inbox.html
@@ -38,30 +38,29 @@
                 <th scope="col">2019/02/15</th>
                 <th scope="col">Updates</th>
                 <th scope="col"><a href="msg-details.html">yo wtf i'm so fucking mad i can't believe you've done this</a></th>
-                <th scope="col"><a href="#">other wiz</a></th>
-                <th scope="col"><a href="#"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></th>
+                <th scope="col"><a href="user-profile.html">other wiz</a></th>
+                <th scope="col"><a href="gom-summary.html"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></th>
               </tr>
               <tr>
                 <td>2019/02/15</td>
                 <td>Updates</td>
-                <td><a href="#">heyyyyyyyyy can you give me an update pls</a></td>
-                <td><a href="#">other wiz</a></td>
-                <td><a href="#"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></td>
+                <td><a href="msg-details.html">heyyyyyyyyy can you give me an update pls</a></td>
+                <td><a href="user-profile.html">other wiz</a></td>
+                <td><a href="gom-summary.html"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></td>
               </tr>
               <tr>
                 <td>2019/02/15</td>
                 <td>Payment</td>
-                <td><a href="#">Hello, I still haven't received your payment for order #1266 (Enamel Pin - JH). Please submit
-                    paym...</a></td>
-                <td><a href="#"><i class="fas fa-star text-success"></i> GOM Master 2000</a></td>
-                <td><a href="#">1266 - Muster Enamel Pins (Rap Line)</a></td>
+                <td><a href="msg-details.html">Hello, I still haven't received your payment for order #1266 (Enamel Pin - JH). Please submit paym...</a></td>
+                <td><a href="user-profile.html"><i class="fas fa-star text-success"></i> GOM Master 2000</a></td>
+                <td><a href="go-listing.html">1266 - Muster Enamel Pins (Rap Line)</a></td>
               </tr>
               <tr>
                 <td>2019/02/15</td>
                 <td>Payment</td>
-                <td><a href="#">okay payment sent!</a></td>
-                <td><a href="#">other wiz</a></td>
-                <td><a href="#"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></td>
+                <td><a href="msg-details.html">okay payment sent!</a></td>
+                <td><a href="user-profile.html">other wiz</a></td>
+                <td><a href="gom-summary.html"><i class="fas fa-star text-primary"></i> 524 - Lights/BWL Japanese Album</a></td>
               </tr>
 
             </tbody>
