--- a/gom/acct-information.html
+++ b/gom/acct-information.html
@@ -21,10 +21,29 @@
     <div id="sidebar"></div>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">My Purchases</h1>
-        </div>
-
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
+        <h1 class="h2">Information</h1>
+      </div>
+      <table class="table table-sm">
+            <tbody>
+                <tr>
+                    <th class="pt-3" scope="row">Name:</th>
+                    <td class="pt-3">wiznaibus</td>
+                </tr>
+                <tr>
+                    <th scope="row">Registered:</th>
+                    <td>2019/04/04</td>
+                </tr>
+                <tr>
+                    <th scope="row">Completed GOs:</th>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <th scope="row">Favorite color:</th>
+                    <td>Orange</td>
+                </tr>
+            </tbody>
+        </table>
       <footer id="footer"></footer>
     </main>
   </div>
@@ -41,7 +60,7 @@
     $(function () {
       $("#header").load("header.html");
       $("#footer").load("footer.html");
-      $("#sidebar").load("go-sidebar.html");
+      $("#sidebar").load("acct-sidebar.html");
     });
   </script>
 </body>
