--- a/gom/acct-settings.html
+++ b/gom/acct-settings.html
@@ -21,10 +21,31 @@
     <div id="sidebar"></div>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">My Purchases</h1>
-        </div>
-
+      <div
+        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
+        <h1 class="h2">Settings</h1>
+      </div>
+      <table class="table table-sm">
+            <tbody>
+                <tr>
+                    <th class="pt-3" scope="row">Name:</th>
+                    <td class="pt-3"><input class="form-control" type="text" value="wiznaibus" /></td>
+                </tr>
+                <tr>
+                    <th scope="row">Email Address:</th>
+                    <td><input class="form-control" type="text" value="wiznaibuswaltz@gmail.com" /></td>
+                </tr>
+                <tr>
+                    <th scope="row">Password:</th>
+                    <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
+                </tr>
+                <tr>
+                    <th scope="row">Confirm password:</th>
+                    <td><input class="form-control" type="password" value="nevergonnagiveyouup" /></td>
+                </tr>
+            </tbody>
+        </table>
+        <button type="button" class="btn btn-success">Save</button>
       <footer id="footer"></footer>
     </main>
   </div>
@@ -41,7 +62,7 @@
     $(function () {
       $("#header").load("header.html");
       $("#footer").load("footer.html");
-      $("#sidebar").load("go-sidebar.html");
+      $("#sidebar").load("acct-sidebar.html");
     });
   </script>
 </body>
