--- a/gom/gom-pending.html
+++ b/gom/gom-pending.html
@@ -22,8 +22,8 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">My Purchases</h1>
-        </div>
+        <h1 class="h2">Open Orders</h1>
+      </div>
 
       <footer id="footer"></footer>
     </main>
@@ -41,7 +41,7 @@
     $(function () {
       $("#header").load("header.html");
       $("#footer").load("footer.html");
-      $("#sidebar").load("go-sidebar.html");
+      $("#sidebar").load("gom-sidebar.html");
     });
   </script>
 </body>
