--- a/gom/gom-sidebar.html
+++ b/gom/gom-sidebar.html
@@ -1,23 +1,12 @@
 <nav class="col-md-2 d-none d-md-block bg-light sidebar">
     <div class="sidebar-sticky">
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            Group Orders <i class="fas fa-chevron-right"></i>
-        </h6>
-        <ul class="nav flex-column mb-2">
-            <li class="nav-item">
-                <a class="nav-link text-primary" href="go-dashboard.html">Buyer Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-primary" href="go-summary.html">Sample Group Order (as Buyer)</a>
-            </li>
-        </ul>
-
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             Group Order Management <i class="fas fa-chevron-right"></i>
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link text-primary" href="gom-dashboard.html">Seller Dashboard</a>
+                <a class="nav-link text-primary" href="gom-dashboard.html">Dashboard</a>
+                <a class="nav-link text-primary" href="gom-pending.html">Open Orders</a>
                 <!-- <ul class="nav flex-column small mb-2 ml-2">
                     <li class="nav-item">
                         <a class="nav-link text-primary pt-0" href="go-dashboard.html">Manager Profile</a>
@@ -31,5 +20,6 @@
                 <a class="nav-link text-primary" href="gom-summary.html">Sample Group Order</a>
             </li>
         </ul>
+        <!-- <a href="#" class="btn btn-success px-3 mt-4 ml-3 mb-1">New Group Order</a> -->
     </div>
 </nav>
