--- a/gom/user-profile.html
+++ b/gom/user-profile.html
@@ -10,18 +10,6 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="dashboard.css" rel="stylesheet">
     <title>wizGOM</title>
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -29,12 +17,23 @@
     <div class="container">
 
         <main role="main">
-            <h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Account</h1>
-            <table class="table table-borderless table-sm small bg-light">
+
+            <div
+                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
+                <h1 class="h2">Profile</h1>
+                <div>
+                    <button class="btn btn-primary">Follow</button>
+                    <button class="btn btn-success">Add Friend</button>
+                    <button class="btn btn-danger">Report</button>
+                </div>
+                
+            </div>
+
+            <table class="table table-sm">
                 <tbody>
                     <tr>
-                        <th scope="row">Name:</th>
-                        <td>wiznaibus</td>
+                        <th class="pt-3" scope="row">Name:</th>
+                        <td class="pt-3">wiznaibus</td>
                     </tr>
                     <tr>
                         <th scope="row">Registered:</th>
@@ -50,6 +49,31 @@
                     </tr>
                 </tbody>
             </table>
+
+            <h4 class="pt-3 pb-2 mb-3 border-bottom">Active Group Orders</h4>
+
+            <div class="d-flex flex-wrap">
+                <div class="w-25 p-1">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                <h4><a href="go-listing.html">524 - Lights/BWL Japanese Album</a></h4>
+                            </div>
+                            <table class="table table-borderless table-sm small bg-light col-6">
+                                <tbody>
+                                    <tr>
+                                        <td>Accepting Orders</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <p class="card-text">
+                                <p>Boy With Luv/Lights ver. 1 - 20</p>
+                                <p>Boy With Luv/Lights ve...</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer id="footer"></footer>
