--- a/gom/help.html
+++ b/gom/help.html
@@ -19,6 +19,21 @@
     <main role="main">
       <h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Help</h1>
       <p>For help with this site prototype, please visit the <a class="text-success" href="https://discord.gg/JAqYE88" target="_blank">official discord server</a>.</p>
+
+      <p>Quick links:
+        <ul>
+            <li><a href="marketplace.html">Marketplace</a></li>
+            <li><a href="go-listing.html">Group Order - Public Listing</a></li>
+            <li><a href="go-order-form-1.html">Group Order - Order Form (1)</a></li>
+            <li><a href="go-order-form-2.html">Group Order - Order Form (2)</a></li>
+            <li><a href="go-dashboard.html">Buyer Dashboard - "My Purchases"</a></li>
+            <li><a href="gom-dashboard.html">Manager Dashboard</a></li>
+            <li><a href="gom-summary.html">Manager - Sample Group Order</a></li>
+            <li><a href="msg-inbox.html">Message Inbox</a></li>
+            <li><a href="acct-information.html">Account Information (Logged-in User)</a></li>
+            <li><a href="user-profile.html">User Profile - Public</a></li>
+        </ul>
+      </p>
     </main>
 
     <footer id="footer"></footer>
