--- a/gom/marketplace.html
+++ b/gom/marketplace.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-9">
                     <div class="d-flex flex-wrap">
-                        <div class="w-50 p-1">
+                        <div class="col-12 col-xl-6 p-1">
                             <div class="card">
                                 <a href="go-listing.html"><img src="images/go-image.jpg" class="card-img-top"
                                         style="height:125px; object-fit:cover;"></a>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
 
-                        <div class="w-50 p-1">
+                        <div class="col-12 col-xl-6 p-1">
                                 <div class="card">
                                     <a href="go-listing.html"><img src="images/go-image2.jpg" class="card-img-top"
                                             style="height:125px; object-fit:cover;"></a>
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
 
-                            <div class="w-50 p-1">
+                            <div class="col-12 col-xl-6 p-1">
                                     <div class="card">
                                         <a href="go-listing.html"><img src="images/jin_scream.png" class="card-img-top"
                                                 style="height:125px; object-fit:cover;"></a>
