Add registration pages, fix order form, and some minor changes

--- a/gom/go-order-form-2.html
+++ b/gom/go-order-form-2.html
@@ -26,7 +26,8 @@
             <div class="card text-center mt-3 mb-3">
                 <div class="card-body">
                     <h1 class="display-4"><i class="small fas fa-check"></i> Order placed!</h1>
-                    <p class="lead">Please send payment for your order using one of <a href="#">wiznaibus</a>'s accepted
+                    <p class="lead">Please send payment for your order using one of <a
+                            href="user-profile.html">wiznaibus</a>'s accepted
                         payment methods</p>
                 </div>
             </div>
@@ -34,25 +35,9 @@
             <div class="row">
                 <div class="col-5">
 
-                        <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
-                            <h4>Payment methods</h4>
-                        </div>
-                        <table class="table table-sm table-borderless bg-light mt-3">
-                            <tbody>
-                                <tr>
-                                    <th>PayPal</th>
-                                    <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <th>Zelle</th>
-                                    <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
-                                </tr>
-                                <tr>
-                                    <th>Venmo</th>
-                                    <td><a href="#">wiznaibuswaltz</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
+                        <h4>Payment</h4>
+                    </div>
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">1st payment</h5>
@@ -63,6 +48,22 @@
                             <small class="text-white">Pay today</small>
                         </div>
                     </div>
+                    <table class="table table-sm table-borderless bg-light mt-3">
+                        <tbody>
+                            <tr>
+                                <th>PayPal</th>
+                                <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
+                            </tr>
+                            <tr>
+                                <th>Zelle</th>
+                                <td><a href="#">wiznaibuswaltz@gmail.com</a></td>
+                            </tr>
+                            <tr>
+                                <th>Venmo</th>
+                                <td><a href="#">wiznaibuswaltz</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="col-7">
                     <div class="d-flex justify-content-between pt-3 pb-2 mb-3 border-bottom">
@@ -87,12 +88,12 @@
                                     <td>$4.61</td>
                                 </tr>
                                 <tr class="bg-primary text-white">
-                                        <td colspan="2">Subtotal</td>
-                                        <td>$30.59</td>
-                                    </tr>
-                                    <tr class="bg-white">
-                                        <td colspan="3"></td>
-                                    </tr>
+                                    <td colspan="2">Subtotal</td>
+                                    <td>$30.59</td>
+                                </tr>
+                                <tr class="bg-white">
+                                    <td colspan="3"></td>
+                                </tr>
                                 <tr>
                                     <td>Fees</td>
                                     <td>Korgou fee (5% of order)<br />
@@ -123,13 +124,13 @@
             </div>
 
             <nav class="nav nav-pills flex-column flex-sm-row mt-5">
-                    <a class="flex-sm-fill text-sm-center nav-link" href="go-listing.html">View group order listing</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="go-dashboard.html">View my orders</a>
-                    <a class="flex-sm-fill text-sm-center nav-link" href="msg-inbox.html">Message GOM</a>
-                  </nav>
+                <a class="flex-sm-fill text-sm-center nav-link" href="go-listing.html">View group order listing</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="go-dashboard.html">View my orders</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="msg-inbox.html">Message GOM</a>
+            </nav>
 
 
-                <footer id="footer"></footer>
+            <footer id="footer"></footer>
         </main>
     </div>
 
