--- a/gom/index.html
+++ b/gom/index.html
@@ -33,7 +33,7 @@
           <h1 class="display-3">wizGOM</h1>
           <p>Blurb about how wizGOM simplifies group orders and is amazing and everybody should use it. Also wiz
             is cool and you should tell her so and send her pictures of Jimin.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign Up <i class="fas fa-angle-right"></i></a></p>
+          <p><a class="btn btn-primary btn-lg" href="acct-register.html" role="button">Sign Up <i class="fas fa-angle-right"></i></a></p>
         </div>
       </div>
 
