--- a/gom/gom-dashboard.html
+++ b/gom/gom-dashboard.html
@@ -24,47 +24,45 @@
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Dashboard</h1>
       </div>
-      <h3>Manager Profile</h3>
-      <div class="row">
-        <div class="col">
-          <table class="table table-borderless table-sm small bg-light">
-            <tr>
-              <th scope="row">Name:</th>
-              <td>wiznaibus</td>
-            </tr>
-          </table>
-        </div>
-        <div class="col">
-          <table class="table table-borderless table-sm small bg-light">
-            <tr>
-              <th scope="row">Id:</th>
-              <td><a href="acct-information.html">wiz-00068465</a></td>
-            </tr>
-            <tr>
-              <th scope="row">Joined:</th>
-              <td>April 3, 2018</td>
-            </tr>
-            <tr>
-              <th scope="row">Completed Group Orders:</th>
-              <td>1</td>
-            </tr>
-          </table>
-        </div>
-        <div class="col">
-          <table class="table table-borderless table-sm small bg-light">
-            <tr>
-              <th scope="row">Reputation:</th>
-              <td>14</td>
-            </tr>
-            <tr>
-              <th scope="row">Reviews:</th>
-              <td>2</td>
-            </tr>
-          </table>
-        </div>
+      <h4 class="mt-4 pt-3 pb-2 mb-3 border-bottom">Stats</h4>
+      <div class="card-deck">
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">Open group orders</h5>
+                  <h1 class="display-4">4</h1>
+              </div>
+          </div>
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">Completed group orders</h5>
+                  <h1 class="display-4">37</h1>
+              </div>
+          </div>
+          <div class="card">
+              <div class="card-body">
+                  <h5 class="card-title">GOM stats</h5>
+                  <table class="table table-striped table-sm">
+                    <tbody>
+                        <tr>
+                          <th>Joined:</th>
+                          <td>2018/04/03</td>
+                        </tr>
+                        <tr>
+                          <th>Reputation:</th>
+                          <td>14</td>
+                        </tr>
+                        <tr>
+                          <th>Reviews:</th>
+                          <td>2</td>
+                        </tr>
+                    </tbody>
+                  </table>
+              </div>
+          </div>
       </div>
+      
 
-      <h3>My Group Orders</h3>
+      <h4 class="mt-4 pt-3 pb-2 mb-3 border-bottom">Open Group Orders</h4>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
@@ -73,49 +71,42 @@
               <th>Date</th>
               <th>Info</th>
               <th>Status</th>
-              <th>Slots</th>
-              <th>Quick Stats</th>
+              <th>Orders</th>
+              <th>Close Date</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>524</td>
-              <td>2019/02/15</td>
-              <td><a href="gom-summary.html">Lights/BWL Japanese Album</a></td>
-              <td>Interest Check</td>
-              <td>2/50</td>
-              <td>
-                <i class="fas fa-dollar-sign text-light"></i>
-                <i class="fas fa-reply text-light"></i>
-                <i class="fas fa-shipping-fast text-light"></i>
-                <i class="fas fa-comments text-light"></i>
-              </td>
-            </tr>
+              <tr>
+                <td>144</td>
+                <td>2019/06/15</td>
+                <td><a href="gom-summary.html">Ddddddddddddddaeng!</a></td>
+                <td>Open</td>
+                <td>3</td>
+                <td>2019/09/01</td>
+              </tr>
+              <tr>
+                <td>524</td>
+                <td>2019/02/15</td>
+                <td><a href="gom-summary.html">Lights/BWL Japanese Album</a></td>
+                <td>Open</td>
+                <td>2</td>
+                <td>2019/09/01</td>
+              </tr>
             <tr>
               <td>506</td>
               <td>2019/02/02</td>
-              <td>Speak Yourself Europe & New York (DVD only)</td>
+              <td><a href="gom-summary.html">Speak Yourself Europe & New York (DVD only)</a></td>
               <td>Awaiting Items</td>
-              <td>9/10</td>
-              <td>
-                <i class="fas fa-dollar-sign text-success"></i>
-                <i class="fas fa-reply text-warning"></i>
-                <i class="fas fa-shipping-fast text-light"></i>
-                <i class="fas fa-comments text-light"></i>
-              </td>
+              <td>9</td>
+              <td>2019/03/01</td>
             </tr>
             <tr>
               <td>399</td>
               <td>2018/06/17</td>
-              <td>Love Yourself Her Albums</td>
+              <td><a href="gom-summary.html">Love Yourself Her Albums</a></td>
               <td>Completed</td>
-              <td>62/60</td>
-              <td>
-                <i class="fas fa-dollar-sign text-success"></i>
-                <i class="fas fa-reply text-success"></i>
-                <i class="fas fa-shipping-fast text-success"></i>
-                <i class="fas fa-comments text-success"></i>
-              </td>
+              <td>62</td>
+              <td>2018/10/10</td>
             </tr>
 
           </tbody>
