--- a/gom/gom-sidebar.html
+++ b/gom/gom-sidebar.html
@@ -1,5 +1,8 @@
 <nav class="col-md-2 d-none d-md-block bg-light sidebar">
     <div class="sidebar-sticky">
+        <div class="d-flex justify-content-between align-items-center px-3 mt-4 mb-1">
+            <a href="gom-new-form-1.html" class="btn btn-success">New Group Order</a>
+        </div>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             Group Order Management <i class="fas fa-chevron-right"></i>
         </h6>
