--- a/gom/header.html
+++ b/gom/header.html
@@ -39,18 +39,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                    <a href="gom-new-form-1.html" class="btn btn-success my-2 my-sm-0">New Group Order</a>
+                <a href="gom-new-form-1.html" class="btn btn-success my-2 my-sm-0">New Group Order</a>
                 <li class="nav-item">
                     <a class="nav-link" href="go-dashboard.html">My Purchases</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="gom-dashboard.html">Manager Dashboard</a>
+                    <a class="nav-link" href="gom-dashboard.html">Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="msg-inbox.html">Messages</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="acct-information.html">Account</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -65,6 +62,7 @@
                             style="width:28px; height:28px; border-radius: 50%;" alt="wiznaibus"></a>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
                         <h6 class="dropdown-header">Welcome, wiznaibus</h6>
+                        <a class="dropdown-item" href="user-profile.html">My profile</a>
                         <a class="dropdown-item" href="acct-information.html">Account</a>
                         <a class="dropdown-item" href="login.html">Sign out</a>
                     </div>
