Begin site split into 3 different views and add splash

--- a/gom/go-details.html
+++ b/gom/go-details.html
@@ -8,7 +8,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="dashboard.css" rel="stylesheet">
+  <link href="../dashboard.css" rel="stylesheet">
   <title>wizGOM</title>
 </head>
 
@@ -22,7 +22,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">My Purchases</h1>
+            <h1 class="h2">Order Details</h1>
         </div>
 
       <footer id="footer"></footer>
