--- a/gom/go-sidebar.html
+++ b/gom/go-sidebar.html
@@ -5,10 +5,13 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link text-primary" href="go-dashboard.html">My Purchases</a>
+                        <a class="nav-link text-primary" href="go-summary.html">My Purchases</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-primary" href="go-summary.html">Order Details</a>
+                        <a class="nav-link text-primary" href="go-details.html">Order Details</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary" href="go-history.html">Purchase History</a>
                     </li>
                 </ul>
         <!-- <a href="#" class="btn btn-success px-3 mt-4 ml-3 mb-1">New Group Order</a> -->
