--- a/gom/gom-sidebar.html
+++ b/gom/gom-sidebar.html
@@ -12,10 +12,10 @@
                 <a class="nav-link text-primary" href="gom-pending.html">Open Orders</a>
                 <!-- <ul class="nav flex-column small mb-2 ml-2">
                     <li class="nav-item">
-                        <a class="nav-link text-primary pt-0" href="go-dashboard.html">Manager Profile</a>
+                        <a class="nav-link text-primary pt-0" href="go-summary.html">Manager Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-primary pt-0" href="go-summary.html">My Group Orders</a>
+                        <a class="nav-link text-primary pt-0" href="go-details.html">My Group Orders</a>
                     </li>
                 </ul> -->
             </li>
