--- a/gom/guest/acct-register.html
+++ b/gom/guest/acct-register.html
@@ -34,7 +34,16 @@
                         <p>Select a username for your account.</p>
                     </div>
                     <div class="form-group col-8">
-                        <input type="text" class="form-control" />
+                        <input type="text" class="form-control" value="wiznaibus" />
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-4">
+                        <strong>Email Address</strong>
+                        <p>Enter your email address</p>
+                    </div>
+                    <div class="form-group col-8">
+                        <input type="text" class="form-control" value="wiznaibuswaltz@gmail.com" />
                     </div>
                 </div>
                 <div class="form-row">
@@ -54,7 +63,12 @@
                         <p>Enter your shipping address so managers know where to send your orders.</p>
                     </div>
                     <div class="form-group col-8">
-                        <textarea class="form-control" rows="5"></textarea>
+                        <textarea class="form-control" rows="5">
+Wiznaibus Waltz
+1013 Jimin Stan Avenue
+Park City, UT 84060
+United States
+                        </textarea>
                     </div>
                 </div>
 
@@ -90,7 +104,7 @@
                                 going to send her Jimin pics</label>
                         </div>
                         <div class="form-group">
-                            <button type="button" class="btn btn-primary btn-lg btn-block mt-3">Register</button>
+                            <a href="../user/acct-registered.html" class="btn btn-primary btn-lg btn-block mt-3">Register</a>
                         </div>
 
                     </div>
@@ -116,7 +130,7 @@
     <script type="text/javascript">
         $(function () {
             $("#header").load("header.html");
-            $("#footer").load("footer.html");
+            $("#footer").load("../footer.html");
         });
     </script>
 </body>
