--- a/gom/guest/login.html
+++ b/gom/guest/login.html
@@ -58,10 +58,10 @@
                     <div class="card-body form-signin">
                         <h1 class="display-3 mb-5 mt-3">wizGOM</h1>
         
-                        <input class="form-control mb-2" placeholder="Username" type="text" value="" />
-                        <input class="form-control mb-5" placeholder="Password" type="password" />
+                        <input class="form-control mb-2" placeholder="Username" type="text" value="wiznaibus" />
+                        <input class="form-control mb-5" placeholder="Password" type="password" value="nevergonnagiveyouup" />
 
-                        <a href="index.html" class="btn btn-lg btn-success btn-block mt-1 mb-2">Sign in</a>
+                        <a href="../user/index.html" class="btn btn-lg btn-success btn-block mt-1 mb-2">Sign in</a>
                     </div>
                 </div>
         </form>
