--- a/gom/footer.html
+++ b/gom/footer.html
@@ -1,7 +1,8 @@
 <footer class="footer pt-4">
     <div class=" mt-auto py-3 border-top pt-3">
         <p class="float-right">
-            <a href="about.html">About</a> &middot;
+                <a href="../index.html">Return to splash</a> &middot;
+                <a href="about.html">About</a> &middot;
             <a href="help.html">Help</a>
         </p>
         <p>&copy; 2019 wiznaibus</p>
