--- a/gom/go-order-form-2.html
+++ b/gom/go-order-form-2.html
@@ -8,7 +8,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="dashboard.css" rel="stylesheet">
+    <link href="../dashboard.css" rel="stylesheet">
     <title>wizGOM</title>
 </head>
 
@@ -125,7 +125,7 @@
 
             <nav class="nav nav-pills flex-column flex-sm-row mt-5">
                 <a class="flex-sm-fill text-sm-center nav-link" href="go-listing.html">View group order listing</a>
-                <a class="flex-sm-fill text-sm-center nav-link" href="go-dashboard.html">View my orders</a>
+                <a class="flex-sm-fill text-sm-center nav-link" href="go-summary.html">View my orders</a>
                 <a class="flex-sm-fill text-sm-center nav-link" href="msg-inbox.html">Message GOM</a>
             </nav>
 
