--- a/gom/gom-summary.html
+++ b/gom/gom-summary.html
@@ -8,7 +8,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="dashboard.css" rel="stylesheet">
+  <link href="../dashboard.css" rel="stylesheet">
   <title>wizGOM</title>
 </head>
 
@@ -209,8 +209,8 @@
           <h4>Images</h4>
           <button class="btn btn-primary">Edit <i class="fas fa-edit"></i></button>
         </div>
-      <a href="#imageModal"><img src="images/go-image.jpg" style="width:150px;" class="img-thumbnail m-2"></a>
-      <a href="#imageModal"><img src="images/go-image2.jpg" style="width:150px;" class="img-thumbnail m-2"></a>
+      <a href="#imageModal"><img src="../images/go-image.jpg" style="width:150px;" class="img-thumbnail m-2"></a>
+      <a href="#imageModal"><img src="../images/go-image2.jpg" style="width:150px;" class="img-thumbnail m-2"></a>
 
       <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
