--- a/gom/guest/go-order-login.html
+++ b/gom/guest/go-order-login.html
@@ -51,17 +51,20 @@
 </head>
 
 <body>
-
     <main role="main">
             <form action="" method="post">
                 <div class="card bg-light text-center" style="width: 20rem;">
                     <div class="card-body form-signin">
                         <h1 class="display-3 mb-5 mt-3">wizGOM</h1>
-        
-                        <input class="form-control mb-2" placeholder="Username" type="text" value="" />
-                        <input class="form-control mb-5" placeholder="Password" type="password" />
 
-                        <a href="index.html" class="btn btn-lg btn-success btn-block mt-1 mb-2">Sign in</a>
+                        <div class="alert alert-info" role="alert">
+                          <i class="fas fa-info-circle"></i> Sign in to place your order
+                        </div>
+        
+                        <input class="form-control mb-2" placeholder="Username" type="text" value="wiznaibus" />
+                        <input class="form-control mb-5" placeholder="Password" type="password" value="nevergonnagiveyouup" />
+
+                        <a href="../user/go-order-form-1.html" class="btn btn-lg btn-success btn-block mt-1 mb-2">Sign in</a>
                     </div>
                 </div>
         </form>
