--- a/gom/help.html
+++ b/gom/help.html
@@ -1,72 +1,34 @@
-<!doctype html>
-<html lang="en">
+<h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Help</h1>
+<p>For help with this site mockup, please visit the <a class="text-success" href="https://discord.gg/JAqYE88"
+    target="_blank">official discord server</a>.</p>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="dashboard.css" rel="stylesheet">
-  <title>wizGOM</title>
-</head>
+<h4>Quick links</h4>
+<p class="mt-3 mb-1">Public
+  <ul>
+    <li><a href="marketplace.html">Marketplace</a></li>
+    <li><a href="go-listing.html">Group Order Listing</a></li>
+    <li><a href="user-profile.html">User Profile</a></li>
+  </ul>
+</p>
 
-<body>
-  <header id="header"></header>
-  <div class="container">
+<p class="mt-3 mb-1">User
+  <ul>
+    <li><a href="acct-register.html">Account Registration</a></li>
+    <li><a href="go-order-form-1.html">Group Order - Order Form (1)</a></li>
+    <li><a href="go-order-form-2.html">Group Order - Order Form (2)</a></li>
+    <li><a href="go-summary.html">My Purchases</a> <span class="small text-muted">(Not designed yet)</span></li>
+    <li><a href="go-details.html">Order Details</a> <span class="small text-muted">(Not designed yet)</span></li>
+    <li><a href="msg-inbox.html">Message Inbox</a></li>
+    <li><a href="acct-information.html">Account Information</a></li>
+  </ul>
+</p>
 
-    <main role="main">
-      <h1 class="h2 pt-3 pb-2 mb-3 border-bottom">Help</h1>
-      <p>For help with this site mockup, please visit the <a class="text-success" href="https://discord.gg/JAqYE88" target="_blank">official discord server</a>.</p>
-
-      <h4>Quick links</h4>
-        <p class="mt-3 mb-1">Public
-        <ul>
-            <li><a href="marketplace.html">Marketplace</a></li>
-            <li><a href="go-listing.html">Group Order Listing</a></li>
-            <li><a href="user-profile.html">User Profile</a></li>
-        </ul>
-      </p>
-        
-        <p class="mt-3 mb-1">User
-        <ul>
-            <li><a href="acct-register.html">Account Registration</a></li>
-            <li><a href="go-order-form-1.html">Group Order - Order Form (1)</a></li>
-            <li><a href="go-order-form-2.html">Group Order - Order Form (2)</a></li>
-            <li><a href="go-dashboard.html">My Purchases</a> <span class="small text-muted">(Not designed yet)</span></li>
-            <li><a href="go-summary.html">Order Details</a> <span class="small text-muted">(Not designed yet)</span></li>
-            <li><a href="msg-inbox.html">Message Inbox</a></li>
-            <li><a href="acct-information.html">Account Information</a></li>
-        </ul>
-      </p>
-
-        <p class="mt-3 mb-1">Manager
-        <ul>
-          <li><a href="gom-register.html">Account Registration</a> <span class="small text-muted">*Requires existing user account</span></li>
-          <li><a href="gom-dashboard.html">Dashboard</a></li>
-          <li><a href="gom-pending.html">Open Orders</a> <span class="small text-muted">(Not designed yet)</span></li>
-          <li><a href="gom-summary.html">Sample Group Order</a></li>
-        </ul>
-      </p>
-    </main>
-
-    <footer id="footer"></footer>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(function () {
-      $("#header").load("header.html");
-      $("#footer").load("footer.html");
-    });
-  </script>
-</body>
-
-</html>
+<p class="mt-3 mb-1">Manager
+  <ul>
+    <li><a href="gom-register.html">Account Registration</a> <span class="small text-muted">*Requires existing user
+        account</span></li>
+    <li><a href="gom-dashboard.html">Dashboard</a></li>
+    <li><a href="gom-pending.html">Open Orders</a> <span class="small text-muted">(Not designed yet)</span></li>
+    <li><a href="gom-summary.html">Sample Group Order</a></li>
+  </ul>
+</p>
