--- a/gom/index.html
+++ b/gom/index.html
@@ -8,69 +8,66 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="dashboard.css" rel="stylesheet">
   <title>wizGOM</title>
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
 </head>
 
 <body>
-  <header id="header"></header>
 
-    <main role="main" id="body">
-      <div class="jumbotron">
-        <div class="container">
-          <h1 class="display-3">wizGOM</h1>
-          <p>Blurb about how wizGOM simplifies group orders and is amazing and everybody should use it. Also wiz
-            is cool and you should tell her so and send her pictures of Jimin.</p>
-          <p><a class="btn btn-primary btn-lg" href="acct-register.html" role="button">Sign Up <i class="fas fa-angle-right"></i></a></p>
+  <main role="main">
+    <div class="container pt-2 pb-2">
+      <h1 class="display-3 mb-5 mt-3">wizGOM</h1>
+      <p>Welcome to the mockup for wiz's GOM website! Here you will be able to see a rough idea of the different views
+        and pages that will eventually be built out into a fully-functioning platform.</p>
+
+      <p class="mb-0">What this site is:
+        <ul>
+          <li>A rough draft</li>
+          <li>In desperate need of feedback</li>
+          <li>A vision of a future where we can all be saved from spreadsheet hell and trying to juggle
+            forms/posts/notifications/DMs/emails</li>
+        </ul>
+      </p>
+
+      <p class="mb-0">What this site isn't:
+        <ul>
+          <li>Functional in any way, shape, or form (despite appearances!) You can't register for an account or
+            create GOs yet, and all the pages have been filled with test data</li>
+        </ul>
+      </p>
+
+      <p>From here, you can view the site three different ways: First, as an anonymous user (Guest), second, as a
+        regular registered user/buyer (User), and third, as a user who is also registered as a group order manager (Manager):
+      </p>
+
+      <div class="card-deck">
+        <div class="card text-center mt-3 mb-3">
+          <a class="btn btn-secondary" href="guest/index.html">
+            <div class="card-body">
+              <h1>Guest</h1>
+            </div>
+          </a>
+        </div>
+        <div class="card text-center mt-3 mb-3">
+          <a class="btn btn-info" href="user/index.html">
+            <div class="card-body">
+              <h1>User</h1>
+            </div>
+          </a>
+        </div>
+        <div class="card text-center mt-3 mb-3">
+          <a class="btn btn-primary" href="manager/index.html">
+            <div class="card-body">
+              <h1>Manager</h1>
+            </div>
+          </a>
         </div>
       </div>
 
-      <div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-          <div class="col-md-6">
-            <h2>Buy</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
-              tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. You know you wanna buy this shit.
-              So take a look at our catalog and start buying shit!</p>
-            <p><a class="btn btn-secondary" href="marketplace.html" role="button">View Marketplace <i
-                  class="fas fa-angle-right"></i></a></p>
-          </div>
-          <div class="col-md-6">
-            <h2>Sell</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. You're one of the people who likes having way too much
-              work to do and selling this shit. And for what? So people can buy this shit, or because you're a masochist. We may never know. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="gom-new-form-1.html" role="button">Create Group Order <i
-                  class="fas fa-angle-right"></i></a></p>
-          </div>
-          <!-- <div class="col-md-4">
-            <h2>Produce</h2>
-            <p>You actually make this shit. But you don't have to sell it. List it here and other people will sell your
-              shit for you. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id
-              ligula porta felis euismod semper.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">Register Vendor Account <i
-                  class="fas fa-angle-right"></i></a></p>
-          </div> -->
-        </div>
-      </div>
-    </main>
-
-    <div class="container">
-        <footer id="footer"></footer>
+      <p>Don't forget to join our <a class="text-success" href="https://discord.gg/JAqYE88"
+        target="_blank">official discord server</a>!</p>
     </div>
-    
+
+  </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -79,12 +76,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(function () {
-      $("#header").load("header.html");
-      $("#footer").load("footer.html");
-    });
-  </script>
 </body>
 
 </html>
