--- a/gom/manager/about.html
+++ b/gom/manager/about.html
@@ -10,42 +10,25 @@
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="../dashboard.css" rel="stylesheet">
   <title>wizGOM</title>
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-
   <header id="header"></header>
-
-  <div class="container-fluid">
-
-    <div id="sidebar"></div>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
-        <h1 class="h2">Information</h1>
-      </div>
-      <table class="table table-sm">
-            <tbody>
-                <tr>
-                    <th class="pt-3" scope="row">Name:</th>
-                    <td class="pt-3">wiznaibus</td>
-                </tr>
-                <tr>
-                    <th scope="row">Registered:</th>
-                    <td>2019/04/04</td>
-                </tr>
-                <tr>
-                    <th scope="row">Completed GOs:</th>
-                    <td>12</td>
-                </tr>
-                <tr>
-                    <th scope="row">Favorite color:</th>
-                    <td>Orange</td>
-                </tr>
-            </tbody>
-        </table>
-      <footer id="footer"></footer>
-    </main>
+  <div class="container">
+    <main role="main"></main>
+    <footer id="footer"></footer>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -59,8 +42,8 @@
   <script type="text/javascript">
     $(function () {
       $("#header").load("header.html");
-      $("#footer").load("footer.html");
-      $("#sidebar").load("acct-sidebar.html");
+      $("#footer").load("../footer.html");
+      $("main").load("../about.html");
     });
   </script>
 </body>
