--- a/gom/user-profile.html
+++ b/gom/user-profile.html
@@ -1,97 +1,55 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="dashboard.css" rel="stylesheet">
-    <title>wizGOM</title>
-</head>
-
-<body>
-    <header id="header"></header>
-    <div class="container">
-
-        <main role="main">
-
-            <div
-                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
-                <h1 class="h2">Profile</h1>
-                <div>
-                    <button class="btn btn-primary">Follow</button>
-                    <button class="btn btn-success">Add Friend</button>
-                    <button class="btn btn-danger">Report</button>
-                </div>
-                
-            </div>
-
-            <table class="table table-sm">
-                <tbody>
-                    <tr>
-                        <th class="pt-3" scope="row">Name:</th>
-                        <td class="pt-3">wiznaibus</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Registered:</th>
-                        <td>2019/04/04</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Completed GOs:</th>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Favorite color:</th>
-                        <td>Orange</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <h4 class="pt-3 pb-2 mb-3 border-bottom">Active Group Orders</h4>
-
-            <div class="d-flex flex-wrap">
-                <div class="w-25 p-1">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-between">
-                                <h4><a href="go-listing.html">524 - Lights/BWL Japanese Album</a></h4>
-                            </div>
-                            <table class="table table-borderless table-sm small bg-light col-6">
-                                <tbody>
-                                    <tr>
-                                        <td>Accepting Orders</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <p class="card-text">
-                                <p>Boy With Luv/Lights ver. 1 - 20</p>
-                                <p>Boy With Luv/Lights ve...</p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <footer id="footer"></footer>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2">
+    <h1 class="h2">Profile</h1>
+    <div>
+        <button class="btn btn-primary">Follow</button>
+        <button class="btn btn-success">Add Friend</button>
+        <button class="btn btn-danger">Report</button>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        $(function () {
-            $("#header").load("header.html");
-            $("#footer").load("footer.html");
-        });
-    </script>
-</body>
 
-</html>
+</div>
+
+<table class="table table-sm">
+    <tbody>
+        <tr>
+            <th class="pt-3" scope="row">Name:</th>
+            <td class="pt-3">wiznaibus</td>
+        </tr>
+        <tr>
+            <th scope="row">Registered:</th>
+            <td>2019/04/04</td>
+        </tr>
+        <tr>
+            <th scope="row">Completed GOs:</th>
+            <td>12</td>
+        </tr>
+        <tr>
+            <th scope="row">Favorite color:</th>
+            <td>Orange</td>
+        </tr>
+    </tbody>
+</table>
+
+<h4 class="pt-3 pb-2 mb-3 border-bottom">Active Group Orders</h4>
+
+<div class="d-flex flex-wrap">
+    <div class="w-25 p-1">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h4><a href="go-listing.html">524 - Lights/BWL Japanese Album</a></h4>
+                </div>
+                <table class="table table-borderless table-sm small bg-light col-6">
+                    <tbody>
+                        <tr>
+                            <td>Accepting Orders</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p class="card-text">
+                    <p>Boy With Luv/Lights ver. 1 - 20</p>
+                    <p>Boy With Luv/Lights ve...</p>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
