--- a/gom/user/header.html
+++ b/gom/user/header.html
@@ -64,7 +64,7 @@
                         <h6 class="dropdown-header">Welcome, wiznaibus</h6>
                         <a class="dropdown-item" href="user-profile.html">My profile</a>
                         <a class="dropdown-item" href="acct-information.html">Account</a>
-                        <a class="dropdown-item" href="login.html">Sign out</a>
+                        <a class="dropdown-item" href="../guest/index.html">Sign out</a>
                     </div>
                 </li>
             </ul>
