--- a/gom/user/marketplace.html
+++ b/gom/user/marketplace.html
@@ -10,31 +10,27 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="../dashboard.css" rel="stylesheet">
     <title>wizGOM</title>
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-
     <header id="header"></header>
 
-    <div class="container-fluid">
+    <main role="main" id="body"></main>
 
-        <div id="sidebar"></div>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div
-                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Group Order</h1>
-            </div>
-
-            <div class="card text-center mt-3 mb-3">
-                <div class="card-body">
-                    <h1 class="display-4"><i class="small fas fa-check"></i> Group order created!</h1>
-                    <p class="lead"><a href="go-listing.html">Click here</a> to view your new group order</p>
-                </div>
-            </div>
-            
-            <footer id="footer"></footer>
-        </main>
+    <div class="container">
+        <footer id="footer"></footer>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -48,8 +44,8 @@
     <script type="text/javascript">
         $(function () {
             $("#header").load("header.html");
-            $("#footer").load("footer.html");
-            $("#sidebar").load("gom-sidebar.html");
+            $("#footer").load("../footer.html");
+            $("main").load("../marketplace.html");
         });
     </script>
 </body>
